# DioxusBrowserExtension

./: .gitignore  .nixd.json  .rustfmt.toml  Cargo.toml  flake.nix  justfile  rust-toolchain.toml
app/: Cargo.toml
app/public/: load-wasm.js  manifest.json
app/src/: main.rs  utils.rs
crates/app/: .gitignore  Cargo.toml  Dioxus.toml  build.rs  tailwind.config.js
crates/app/public/: manifest.json  popup.html
crates/app/src/: main.rs
crates/app/src/components/: mod.rs  selected_stream.rs  steam_info.rs  stream_list.rs  tab_list.rs
crates/app/src/twitch/: mod.rs
crates/browser_apis/: Cargo.toml
crates/browser_apis/src/: lib.rs  tab.rs
nix/: dioxus-cli.nix  rust.nix  update-dixous-lock.patch
