[package]
name = "app"
version = "0.1.0"
authors = ["John Murray <5672686+JRMurr@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = "0.3"
dioxus-web = "0.3"

log = { workspace = true }

# WebAssembly Debug
wasm-logger = "0.2.0"
console_error_panic_hook = "0.1.7"

web-extensions = "0.3.0"
dioxus-logger = "0.4.1"
web-extensions-sys = "*"
wasm-bindgen = "*"
js-sys = "*"
miette = { workspace = true }
serde = { workspace = true }
serde_json = "1.0.99"
gloo-utils = "0.1.7"
