[package]
name = "browser_apis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus-logger = "0.4.1"
web-extensions-sys = "0.4.1"
wasm-bindgen = "*"
js-sys = "*"
miette = { workspace = true }
serde = { workspace = true }
serde_json = "1.0.99"
gloo-utils = "0.1.7"
url = { version = "2.4.0", features = ["serde"] }
derive_more = { version = "0.99.17", features = ["display"] }
